--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.9.0",
     "firebase": "^10.3.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.274.0",
